fixed bugs in dark mode functionality

--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -1,7 +1,7 @@
 .container {
   margin: 0 auto;
-  max-width: 80vw;
-  padding: 1rem;
+  max-width: 100vw;
+  padding: 2rem;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
