--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -1,4 +1,4 @@
-body {
+body.light {
   --bg: #e9e9e9;
   --dropShadow: #202429;
   //--bg: #0D40FC;
